--- a/game.html
+++ b/game.html
@@ -34,6 +34,19 @@
             game.board.rotate()
             isRotating = false
         })
+
+        arrowsContainer.querySelectorAll(".arrow").forEach(arrow => {
+            arrow.addEventListener("click", () => {
+
+                const direction = arrow.id.replace("Arrow", "")
+                document.querySelector(".selectedGravity").classList.toggle("selectedGravity")
+                arrow.classList.toggle("selectedGravity")
+
+                game.shiftGravity(direction)
+            })
+        })
+
+
     })
 
     </script>
