Removed some old code

--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <title>game</title>
     <script src="dist/game.min.js"></script>
     <link rel="stylesheet" type="text/css" href="dev/style.css">
+    <meta charset="utf8"/>
     <script>
     "use strict"
 
