--- a/game.html
+++ b/game.html
@@ -4,22 +4,16 @@
     <title>game</title>
     <script src="dist/game.min.js"></script>
     <link rel="stylesheet" type="text/css" href="dev/style.css">
+    <script src="three.min.js"></script>
     <meta charset="utf8"/>
     <script>
     "use strict"
 
-    window.shuffle = arr => {
-        for (let i=arr.length; i; i--) {
-            const j = Math.floor(Math.random() * i)
-            const x = arr[i-1]
-            arr[i-1] = arr[j]
-            arr[j] = x
-        }
-    }
-
     window.addEventListener("load", () => {
 
         let isRotating = false
+        let rotation = 45
+        let mouseIsDown = false
         let isRotatingTimeout
 
         resetButton.addEventListener("click", () => {
@@ -37,31 +31,174 @@
         })
         resetButton.click()
 
+        // Arrows stuff
+        const initArrows = () => {
 
+            let hoveredObject
+            let clickedObject
+            const WHITE = 0x555555
+            const YELLOW = 0xaaaa00
+            const CYAN = 0x00aaaa
+            const arrowModels = []
+            const arrowNames = ["left", "right", "up", "down", "forward", "backward"]
+            const rotations = [
+                {x: 0.25, y: 0.0, z: 0}, // left
+                {x: 0.25, y: 0.50, z: 0}, // right
+                {x: 0.25, y: 0.75, z: 0}, // up
+                {x: 0.25, y: 0.25, z: 0}, // down
+                {x: 0.25, y: 0.50, z: 0.25}, // forward
+                {x: 0.25, y: 0.50, z: 0.75}, // backward
+            ]
+            const positions = [
+                {x: -0.125, y: 0, z: 0}, // left
+                {x: 0.125, y: 0, z: 0}, // right
+                {x: 0, y: 0.1, z: 0}, // up
+                {x: 0, y: -0.1, z: 0}, // down
+                {x: 0, y: 0, z: -0.125}, // forward
+                {x: 0, y: 0, z: 0.125}, // backward
+            ]
 
-        // Rotate via mouse scroll
-        window.addEventListener("wheel", ({deltaY}) => {
-            isRotating = true
-            game.board.rotationValue += (deltaY > 0 ? 1 : -1) * 5
-            game.board.rotate()
-            isRotating = false
-        })
+            const scene = new THREE.Scene()
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000)
+            camera.position.z = 4
+            camera.position.y = 2
+            const renderer = new THREE.WebGLRenderer({alpha: true, antialias: true})
+            renderer.setPixelRatio( window.devicePixelRatio )
+            renderer.setSize(400, 400)
+            renderer.domElement.id = "arrowsCanvas"
+            arrowsContainer.appendChild(renderer.domElement)
 
-        arrowsContainer.querySelectorAll(".arrow").forEach(arrow => {
-            arrow.addEventListener("click", () => {
+            const loader = new THREE.ObjectLoader()
+            const raycaster = new THREE.Raycaster()
+            const mouse = new THREE.Vector2()
+            const light = new THREE.DirectionalLight( 0xffffff, 1 )
+            light.position.set( 0, 1, 0 ).normalize()
+            scene.add(light)
 
-                const direction = arrow.id.replace("Arrow", "")
-                document.querySelector(".selectedGravity").classList.toggle("selectedGravity")
-                arrow.classList.toggle("selectedGravity")
+            for (let a=0; a<6; a++) {
+                loader.load("arrow.json", model => {
 
-                game.shiftGravity(direction)
+                    model.position.x = positions[a].x * 2 * Math.PI
+                    model.position.y = positions[a].y * 2 * Math.PI
+                    model.position.z = positions[a].z * 2 * Math.PI
+
+                    model.rotation.x = rotations[a].x * 2 * Math.PI
+                    model.rotation.y = rotations[a].y * 2 * Math.PI
+                    model.rotation.z = rotations[a].z * 2 * Math.PI
+
+                    model.children.forEach(c => {
+                        if (a==3) {
+                            c.material.emissive.setHex(CYAN)
+                            clickedObject = model
+                        } else {
+                            c.material.emissive.setHex(WHITE)
+                        }
+                    })
+
+                    arrowModels.push(model)
+                    model.data = {arrowIndex: a}
+                    scene.add(model)
+                })
+            }
+
+            const render = () => {
+                requestAnimationFrame(render)
+                camera.lookAt(scene.position)
+
+                // const vector = new THREE.Vector3(mouse.x, mouse.y, 1)
+                camera.updateMatrixWorld()
+                raycaster.setFromCamera( mouse, camera )
+
+                const intersects = raycaster.intersectObjects(scene.children, true)
+
+                if (intersects.length) {
+
+                    hoveredObject = intersects[0].object.name.toLowerCase().startsWith("box") ? intersects[0].object.parent : intersects[0].object
+
+                    if (hoveredObject == clickedObject) {
+                        // do nothing
+                    } else {
+
+                        if (mouseIsDown) {
+                            if (clickedObject) {
+                                // Clear old one
+                                clickedObject.children.forEach(c => c.material.emissive.setHex(WHITE))
+                            }
+
+                            // Set new one to cyan
+                            hoveredObject.children.forEach(c => c.material.emissive.setHex(CYAN))
+                            clickedObject = hoveredObject
+                            console.log("clicked", arrowNames[clickedObject.data.arrowIndex])
+                            game.shiftGravity(arrowNames[clickedObject.data.arrowIndex])
+                        } else {
+                            // Hovering over non clicked item without the mouse down
+                            arrowModels.forEach(arrow => {
+                                if (arrow != clickedObject) {
+                                    arrow.children.forEach(c => c.material.emissive.setHex(WHITE))
+                                }
+                            })
+
+                            if (hoveredObject != clickedObject) {
+                                hoveredObject.children.forEach(c => c.material.emissive.setHex(YELLOW))
+                            }
+                        }
+                    }
+
+                } else {
+                    if (arrowModels) {
+                        arrowModels.forEach(arrow => {
+
+                            if (arrow != clickedObject) {
+                                arrow.children.forEach(c => c.material.emissive.setHex(WHITE))
+                            }
+                        })
+                    }
+                    hoveredObject = null
+                }
+                renderer.render(scene, camera)
+            }
+
+            render()
+
+            const setRotation = rotation => {
+                camera.position.x = Math.sin(rotation*Math.PI/180) * 3
+                camera.position.z = Math.cos(rotation*Math.PI/180) * 3
+            }
+            setRotation(rotation=-45)
+
+            // Maybe do it on canvas, instead of document?
+            renderer.domElement.addEventListener("mousemove", event => {
+                const size = event.target.height
+                mouse.x = (event.offsetX / size) * 2 - 1
+                mouse.y = - (event.offsetY / size) * 2 + 1
+            }, false)
+            document.addEventListener("mousedown", () => mouseIsDown = true)
+            document.addEventListener("mouseup", () => mouseIsDown = false)
+            document.addEventListener("click", () => mouseIsDown = false)
+
+            window.addEventListener("wheel", ({deltaY}) => {
+                isRotating = true
+                game.board.rotationValue += (deltaY > 0 ? 1 : -1) * 5
+                game.board.rotate()
+                isRotating = false
+
+                rotation = (rotation + (deltaY > 0 ? 1 : -1) * 5) % 360
+                setRotation(rotation)
             })
-        })
+
+
+            window.addEventListener("arrowClicked", ({detail}) => {
+
+            })
+        }
+        initArrows()
+
 
         window.trainAI = () => {
             game.gravityEnabled = false
             game.trainAI({epochs: 600, epsilon: 0.5})
         }
+
     })
 
     </script>
@@ -110,19 +247,7 @@
             <button id="resetButton">Reset</button>
         </div>
 
-
-        <div id="arrowsContainer">
-            <div id="flatArrowsContainer">
-                <div class="arrow" id="leftArrow">⇦</div>
-                <div class="arrow" id="forwardArrow">⇦</div>
-                <div class="arrow" id="backwardArrow">⇦</div>
-                <div class="arrow" id="rightArrow">⇦</div>
-            </div>
-            <div id="verticalArrowsContainer">
-                <div class="arrow" id="upArrow">⇧</div>
-                <div class="arrow selectedGravity" id="downArrow">⇩</div>
-            </div>
-        </div>
+        <div id="arrowsContainer"></div>
     </div>
 
     <div id="content">
